# herd

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  docker-compose.integration.yml  index.html  package-lock.json  package.json  pw-repl.ts  pw-run.ts  test-e2e.ts  vite.config.ts  vitest.integration.config.ts
.claude/: settings.json
.claude/hooks/: on-agent-start.sh  on-bg-bash.sh  on-subagent-start.sh  stream-transcript.py
docker/integration/: Dockerfile
docs/: README.md  architecture.md  cli.md  configuration.md  docker.md  keyboard-shortcuts.md  quickstart.md  rules.md  session-and-layout.md  socket-and-test-driver.md  testing.md  tui.md
mcp-server/: package-lock.json  package.json
prd/: 2026_02_20_tmux_agent_herd_tui_prd.md  2026_02_20_tmux_agent_shepherd_tui_prd.md  2026_02_21_config_externalization_prd.md  2026_02_21_core_fixture_integration_tests_prd.md  2026_02_21_docker_integration_test_env_prd.md  2026_02_21_rule_engine_herder_log_prd.md  2026_02_21_settings_overlay_prd.md  2026_02_21_status_trigger_state_machine_prd.md  2026_02_22_codex_app_server_status_prd.md  2026_02_22_docker_codex_seed_prd.md  2026_02_22_herd_log_color_filter_prd.md  2026_02_23_codex_split_refactor_prd.md  2026_02_23_codex_tmux_modular_refactor_prd.md  2026_02_23_config_io_merge_split_prd.md  2026_02_23_config_modular_refactor_prd.md  2026_02_23_docs_screenshot_automation_prd.md  2026_02_23_exhaustive_happy_path_integration_prd.md  2026_02_23_followup_modular_refactor_prd.md  2026_02_23_herd_ux_recording_gif_prd.md  2026_02_23_integration_suite_recording_gif_prd.md  2026_02_23_key_handling_state_refactor_prd.md  2026_02_23_llm_split_refactor_prd.md  2026_02_23_modular_refactor_prd.md  2026_02_23_render_helpers_split_prd.md  2026_02_23_render_sections_refactor_prd.md  2026_02_23_render_surface_refactor_prd.md  2026_02_23_rules_agent_modular_refactor_prd.md  2026_02_23_rules_surface_split_prd.md  2026_02_23_settings_modular_refactor_prd.md  2026_02_23_settings_types_refactor_prd.md  2026_02_23_state_navigation_refactor_prd.md  2026_02_23_tmux_split_refactor_prd.md  2026_02_23_tui_core_types_split_prd.md  2026_02_23_tui_interaction_refactor_prd.md  2026_02_23_tui_log_state_refactor_prd.md  2026_02_23_tui_runtime_loop_refactor_prd.md  2026_02_23_tui_runtime_loop_split_prd.md  2026_02_23_tui_runtime_split_prd.md  2026_02_23_tui_section_actions_split_prd.md  2026_03_13_tauri_canvas_terminal_scaffold_prd.md  (+75 more)
scripts/: capture-doc-screenshots.sh  record-herd-ux-gif.py  record-integration-tests-gif.py  render-doc-screenshots.py  run-docker-integration-tests.sh  run-herd-container-entrypoint.sh  run-herd.sh  run-integration-tests.sh
src/: App.svelte  agent.rs  cli.rs  codex.rs  config.rs  domain.rs  herd.rs  lib.rs  llm.rs  main.rs  main.ts  rules.rs  tmux.rs  tui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  browser.rs  cli.rs  commands.rs  db.rs  lib.rs  main.rs  network.rs  persist.rs  runtime.rs  session_config.rs  state.rs  tile_message.rs  tile_registry.rs  tmux.rs  tmux_control.rs  tmux_state.rs  work.rs
src-tauri/src/socket/: mod.rs  protocol.rs  server.rs
tests/: agent_classifier.rs  browser-game-helpers.ts  browser-game-scenarios.ts  cli_herd.rs  cli_root.rs  cli_sessions.rs  config_settings_resilience.rs  contracts_core.rs  docs_screenshots.rs  herd_monitor.rs  integration_fixtures_runtime.rs  integration_tmux_runtime.rs  tmux_discovery.rs  tui_app.rs
tmp/: herd-state.json
(+175 files in other folders)
