[package]
name = "herd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
tui-term = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
chrono = { version = "0.4.40", features = ["clock"] }
ureq = { version = "2.12.1", features = ["json"] }
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
