[package]
name = "herd"
version = "0.1.0"
description = "2D canvas terminal workspace for AI agents"
authors = ["skryl"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "herd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
chrono = "0.4"
